css/style.css
@import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100;300;500;700&display=swap');
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body::-webkit-scrollbar {
    width: 3px;
    background-color: rgba(21, 28, 36, 0.301);
    /* background-color: transparent; */
}
 
/* ::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
    border-radius: 10px;
}
 */
::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: antiquewhite; 
    border-radius: 25%;
} 
body {
    font-family: 'Barlow Semi Condensed', sans-serif;
    background: rgb(0, 0, 0);
    color: #fff;
    
  }

a {
    text-decoration: none;
    color: #fff;
}

ul {
    list-style: none;
}

.main-header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 3;
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-transform: uppercase;
    height: 100px;
    padding: 0 30px;
    transition: all 0.05s ease-in-out;
}


.logo {
    width: 210px;
    height: auto;
    margin-right: auto;
}
  
  .logo img {
    display: block;
    width: 100%;
    height: auto;
}



/* Desktop Menu */
.nav-right{
    margin-right: 40px;
}

.desktop-main-menu
{
    margin: auto;
}




.desktop-main-menu ul {
    display: flex;
}
.desktop-main-menu ul li, .nav-right ul li {
    position: relative;
    margin-right: 15px;
    padding-bottom: 2px;
}

.desktop-main-menu ul li a::after , .nav-right ul li a::after{
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 1px;
    background: #fff;
    transform: scaleX(0);
    transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
    transform-origin: right center;
}

.desktop-main-menu ul li a:hover::after , .nav-right ul li a:hover:after{
    transform: scaleX(1);
    transform-origin: left center;
    transition-duration: 0.6s;
}
/* section start */
section {
    position: relative;
    height: 100vh;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    text-transform: uppercase;
}

.section-inner {
    position: absolute;
    bottom: 100px;
    left: 50px;
    max-width: 560px;
}

.section-inner h4 {
    font-size: 22px;
    margin-bottom: 5px;
    font-weight: 400;
    animation: fadeInUp 0.5s ease-in-out;
  }

  .section-inner h2 {
    font-size: 50px;
    font-weight: 700;
    margin-bottom: 20px;
    animation: fadeInUp 0.5s ease-in-out 0.2s;
    animation-fill-mode: both; 
}

.section-inner a {
    animation: fadeInUp 0.5s ease-in-out 0.4s;
    animation-fill-mode: both; 
}

.btn {
    position: relative;
    display: inline-block;
    cursor: pointer;
    text-align: center;
    min-width: 130px;
    padding: 15px 50px;
    margin-top: 10px;
    border: 2px solid #fff;
    text-transform: uppercase;
    font-weight: bold;
    overflow: hidden;
    z-index: 2;
}

.btn:hover span {
    color: #000;
}
.btn .hover {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #fff;
    z-index: -1;
    transform: translateY(100%);
    transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
}

.btn:hover .hover {
    transform: translateY(0);
}

.scroll-arrow {
    position: absolute;
    bottom: 50px;
    left: 50%;
    transform: translateX(-50%);
    animation: fadeBounce 5s infinite;
}
  
.menu-background
{
    background-color: #000;
}

footer
{
    position: relative;
    padding: 55px 0 ;
}

footer ul
{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

footer ul li
{
    margin-right: 40px;
    color: #aaa;
    text-transform: uppercase;
    font-size: 13px;
    line-height: 2.5;
}

footer ul li a 
{
    color: #fff;
    transition: color 0.6s;
}

footer ul li a:hover
{
    color: #aaa;
}

/* Background images */
.section-a {
    background-image: url('../img/section--aa.webp');
}
.section-b {
    background-image: url('../img/section-d.webp');
}
.section-c {
    background-image: url('../img/section-e.webp');
}
.section-d {
    background-image: url('../img/section-f.webp');
}

/* animation */
@keyframes fadeInUp {
    0% {
      opacity: 0;
      transform: translateY(140px);
    }
  
    100% {
      opacity: 1;
      transform: translateY(0);
    }
}

@keyframes fadeBounce {
    0%,
    20%,
    50%,
    80%,
    100% {
      opacity: 0;
      transform: translateY(-20px);
    }
  
    40% {
      opacity: 1;
      transform: translateY(0);
    }
}

/* media query */
@media (min-width:961px) and (max-width:1002px) {
    .logo
    {
        width: 180px;
    }
    .desktop-main-menu ul
    {
        font-size: 14px;
    }
}

@media (max-width:960px) {
    .desktop-main-menu
    {
        display: none;
    }
    .nav-right
    {
        display: none;
    }
    .section-inner-center h3 {
        font-size: 75px;
    }
    .section
    {
        height: 95vh;
    }
    .main-header
    {
        height: 60px;
    }
    .hamburger
    {
    position: fixed;
    top: 24px;
    right: 20px;
    z-index: 12;
    cursor: pointer;
    width: 20px;
    height: 20px;
    background: none;
    border: none;
    }
    
}
@media (max-width:600px) {
    .desktop-main-menu
    {
        display: none;
    }
    .nav-right
    {
        display: none;
    }
    .logo
    {
        margin: auto;
        width: 150px;
    }
    .main-header
    {
        padding: 0;
    }
    .section-inner {
        bottom: 75px;
        left: 20px;
    }
    
    .section-inner h2 {
        font-size: 40px;
        margin-bottom: 0;
    }

    .section-inner h4
    {
        margin-bottom: 0;
    }

    .section-d {
        background-position-x: -550px;
    }
    .section-b {
        background-position-x: -200px;
    }

    .section-a
    {
        background-position-x: -440px;
    }
    

    footer ul li:first-child {
        position: absolute;
        top: 30px;
        left: 50%;
        transform: translate(-50%, -50%);
    }
    
      footer ul li {
        margin-right: 15px;
    }
    
      .logo {
        width: 150px;
        margin: auto;
    }
    
      .section-inner-center h3 {
        font-size: 50px;
    }
    #lost
    {
        font-size: 30px;
    }
    .section
    {
        height: 95vh;
    }
}
/* overlay black @ menu click */
.overlay-show
{
    position: fixed;
    top:0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, .55);
    z-index: 5;
}



/* hamburger */
.hamburger
{
    position: fixed;
    right: 25px;
    z-index: 12;
    cursor: pointer;
    width: 16px;
    height: 16px;
    background: none;
    border: none;
    transition: all 0.5s;
}

.hamburger-top,
.hamburger-middle,
.hamburger-bottom
{
    position: absolute;
    width: inherit;
    height: 1px;
    top: 0px;
    left: 0px;
    background: #fff;
}

.hamburger-middle
{
    transform: translateY(7px);
}
.hamburger-bottom
{
    transform: translateY(14px);
}

/* hamburger open X function */
.open
{
    transform: rotate(90deg) scale(1.5);
    transition: all .3s cubic-bezier(0.39, 0.575, 0.565, 1);
}

.open .hamburger-middle
{
    /* display: none; */
    opacity: 0;
    transition:opacity .3s ease-in-out;
}

.open .hamburger-top
{
    transform: rotate(45deg) translateX(3px);
    transform-origin: left;

}
.open .hamburger-bottom
{
    transform-origin: right;
    transform: rotate(-45deg) translateX(-3px);
    
    
} 

